--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 == dead simple reports ==
 
-this rails plugin allows you to easily create and view arbitrary reports of your database tables. it therefore creates a reports controller with views and a report model in your application. to create a report you simply create an instance of Report. it then appears in the list of reports where you can view it either as html table or csv data.
+this rails plugin allows you to easily create and view arbitrary reports of your database tables. it therefore creates a reports controller with views and a report model in your application. to create a report you simply create an instance of Report. it then appears in the list of reports where you can view it either as html, csv or xls table.
 
 === to create a report ===
 
@@ -17,6 +17,10 @@ to view the list of reports just go to http://localhost:3000/reports
 === customizing the views ===
 
 to customzie the views you can simply edit the files under app/views/reports in your application.
+
+== customizing the controller ==
+
+to customize the controller you can add code to the app/controllers/reports_controller file generated in your application.
 
 
 === contact ===
